fix project title gap

--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
 body{
     min-height: 100vh;
 }
+
+h2{
+    font-size: 1.3rem;
+}
 #container{
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -179,6 +183,8 @@ body{
     grid-template-columns: 1fr 1fr;
     /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
     margin-left: 10px;
+    grid-template-rows: auto 1fr;
+    grid-auto-rows: 1fr;
 }
 
 .card{
